zien24_implementation/org/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Base_Price_Original__c</fullName>
        <label>Base Price Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CPQB__Price_Recurrence__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Price Recurrence</label>
        <referenceTo>CPQB__Price_Recurrence__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CPQB__Unit_of_Measurement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit of Measurement</label>
        <referenceTo>CPQB__Unit_of_Measurement__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description_Original__c</fullName>
        <label>Description Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Name_Original__c</fullName>
        <label>Name Original</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Id__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>The ZIEN24 Product Id</inlineHelpText>
        <label>Product Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>